[workspace]
resolver = "2"
members = [
  "audio",
  "backends/auto",
  "backends/dummy",
  "backends/gstreamer",
  "backends/gstreamer/render",
  "backends/gstreamer/render-unix",
  "examples",
  "examples/android/lib",
  "player",
  "servo-media",
  "servo-media-derive",
  "streams",
  "webrtc",
]

[workspace.dependencies]
glib = { git = "https://github.com/eerii/gtk-rs-core.git", branch = "nolink", package = "glib" }
glib-sys = { git = "https://github.com/eerii/gtk-rs-core.git", branch = "nolink", package = "glib-sys" }

gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/eerii/gstreamer-rs.git", branch = "nolink" }
gst-app = { package = "gstreamer-app", git = "https://gitlab.freedesktop.org/eerii/gstreamer-rs.git", branch = "nolink" }
gst-audio = { package = "gstreamer-audio", git = "https://gitlab.freedesktop.org/eerii/gstreamer-rs.git", branch = "nolink" }
gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/eerii/gstreamer-rs.git", branch = "nolink" }
gst-gl = { package = "gstreamer-gl", git = "https://gitlab.freedesktop.org/eerii/gstreamer-rs.git", branch = "nolink" }
gst-player = { package = "gstreamer-player", git = "https://gitlab.freedesktop.org/eerii/gstreamer-rs.git", branch = "nolink" }
gst-sdp = { package = "gstreamer-sdp", git = "https://gitlab.freedesktop.org/eerii/gstreamer-rs.git", branch = "nolink" }
gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/eerii/gstreamer-rs.git", branch = "nolink" }
gst-webrtc = { package = "gstreamer-webrtc", git = "https://gitlab.freedesktop.org/eerii/gstreamer-rs.git", branch = "nolink", features = [
  "v1_18",
] }

gstreamer-gl-egl = { git = "https://gitlab.freedesktop.org/eerii/gstreamer-rs.git", branch = "nolink", package = "gstreamer-gl-egl" }
gstreamer-gl-wayland = { git = "https://gitlab.freedesktop.org/eerii/gstreamer-rs.git", branch = "nolink", package = "gstreamer-gl-wayland" }
gstreamer-gl-x11 = { git = "https://gitlab.freedesktop.org/eerii/gstreamer-rs.git", branch = "nolink", package = "gstreamer-gl-x11" }
gstreamer-sys = { git = "https://gitlab.freedesktop.org/eerii/gstreamer-rs.git", branch = "nolink", package = "gstreamer-sys" }

ipc-channel = "0.18"

[patch."https://github.com/servo/webrender"]
webrender = { git = "https://github.com/jdm/webrender", branch = "crash-backtrace" }
webrender_api = { git = "https://github.com/jdm/webrender", branch = "crash-backtrace" }
