[workspace]
resolver = "2"
members = [
  "audio",
  "backends/auto",
  "backends/dummy",
  "backends/gstreamer",
  "backends/gstreamer/render",
  "backends/gstreamer/render-unix",
  "examples",
  "examples/android/lib",
  "player",
  "servo-media",
  "servo-media-derive",
  "streams",
  "webrtc",
]

[workspace.dependencies]
glib = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "main" }
glib-sys = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "main" }
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/eerii/gstreamer-rs", branch = "binaries" }
gst-app = { package = "gstreamer-app", git = "https://gitlab.freedesktop.org/eerii/gstreamer-rs", branch = "binaries" }
gst-audio = { package = "gstreamer-audio", git = "https://gitlab.freedesktop.org/eerii/gstreamer-rs", branch = "binaries" }
gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/eerii/gstreamer-rs", branch = "binaries" }
gst-gl = { package = "gstreamer-gl", git = "https://gitlab.freedesktop.org/eerii/gstreamer-rs", branch = "binaries" }
gst-player = { package = "gstreamer-player", git = "https://gitlab.freedesktop.org/eerii/gstreamer-rs", branch = "binaries" }
gst-sdp = { package = "gstreamer-sdp", git = "https://gitlab.freedesktop.org/eerii/gstreamer-rs", branch = "binaries" }
gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/eerii/gstreamer-rs", branch = "binaries" }
gst-webrtc = { package = "gstreamer-webrtc", git = "https://gitlab.freedesktop.org/eerii/gstreamer-rs", branch = "binaries", features = [ "v1_18" ] }
gstreamer-gl-egl = { git = "https://gitlab.freedesktop.org/eerii/gstreamer-rs", branch = "binaries" }
gstreamer-gl-wayland = { git = "https://gitlab.freedesktop.org/eerii/gstreamer-rs", branch = "binaries" }
gstreamer-gl-x11 = { git = "https://gitlab.freedesktop.org/eerii/gstreamer-rs", branch = "binaries" }
gstreamer-sys = { git = "https://gitlab.freedesktop.org/eerii/gstreamer-rs", branch = "binaries" }
ipc-channel = "0.19"

[patch."https://github.com/servo/webrender"]
webrender = { git = "https://github.com/jdm/webrender", branch = "crash-backtrace" }
webrender_api = { git = "https://github.com/jdm/webrender", branch = "crash-backtrace" }

[patch.crates-io]
system-deps = { git = "https://github.com/eerii/system-deps", branch = "binary" }
